expected/main/lc/bad-literals.err
ERROR: "actual/main/lc/bad-literals.llc", line 1
  bad    = f 0o8
             ^
Missing digits for octal literal

ERROR: "actual/main/lc/bad-literals.llc", line 4
           (f 0xg
              ^
Missing digits for hexadecimal literal

ERROR: "actual/main/lc/bad-literals.llc", line 5
           (f 0Xg
              ^
Missing digits for hexadecimal literal

ERROR: "actual/main/lc/bad-literals.llc", line 7
           (f 0b32
              ^
Missing digits for binary literal

ERROR: "actual/main/lc/bad-literals.llc", line 8
           (f 0b45
              ^
Missing digits for binary literal

ERROR: "actual/main/lc/bad-literals.llc", line 10
           (f 0b_
              ^
Missing digits for binary literal

ERROR: "actual/main/lc/bad-literals.llc", line 11
           (f 0x
              ^
Missing digits for hexadecimal literal

ERROR: "actual/main/lc/bad-literals.llc", line 13
           (f 0X
              ^
Missing digits for hexadecimal literal

ERROR: "actual/main/lc/bad-literals.llc", line 14
           (f 0b
              ^
Missing digits for binary literal

ERROR: "actual/main/lc/bad-literals.llc", line 15
           (f 0B
              ^
Missing digits for binary literal

ERROR: "actual/main/lc/bad-literals.llc", line 16
           (f 0o
              ^
Missing digits for octal literal

ERROR: "actual/main/lc/bad-literals.llc", line 17
              0O)))))))))))))
              ^
Missing digits for octal literal

ERROR: Aborting after 12 previously reported errors

